# ThrowbackLoader

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  build.sh  toolchain-x86_64-w64-mingw32.cmake
.github/workflows/: release.yml
Bundle/: Config.toml
Core/: Config.cpp  Config.h  ConfigParse.h  Consts.h  Core.h  Logger.cpp  Logger.h  Utils.cpp  Utils.h
DefaultArgs/: DllMain.cpp  exports.def
Launcher/: LaunchR6S.cpp
UplayR1/: DllMain.cpp
UplayR1/uplay/: Save.cpp  Store.cpp  Uplay.h
UplayR2/uplay/: Achievement.cpp  Friend.cpp  Product.cpp  StorageFile.cpp  Uplay.h
